Fix overflow hidden when modal is open

--- a/style.css
+++ b/style.css
@@ -63,8 +63,8 @@ header {
 
 .overlay {
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
@@ -75,7 +75,7 @@ header {
 }
 
 .modal {
-  height: 100vh;
+  min-height: 100vh;
   width: 80%;
   background-color: darkblue;
   margin-left: auto;
